--- a/src/Components/Expenses/ExpenseCard.css
+++ b/src/Components/Expenses/ExpenseCard.css
@@ -75,6 +75,7 @@
   border: 1px solid black;
   display: flex;
   justify-content: space-between;
+  border: none;
 
   /* display: flex !important;
   justify-content: flex-end !important; */
@@ -169,13 +170,9 @@
 .expense-dashboard > .card-element > .selected-currency,
 .expense-dashboard > .card-element > .input {
   padding-right: 0px !important;
-  /* display: flex !important;
-	justify-content: flex-end !important; */
-
-  /* border: 1px solid black; */
   margin: 0px !important;
-  padding: 0px !important;
   min-width: fit-content !important;
+  margin-left: 1rem !important;
 }
 
 .expense-dashboard-recurring > .card-element > .expense-card-text,
@@ -185,8 +182,8 @@
 }
 
 .expense-dashboard-recurring > .card-element > .expense-card-text.amount {
-  display: flex !important;
-  justify-content: flex-end !;
+  /* display: inline-flex;
+  justify-content: flex-end; */
 }
 
 /* WHEN EDIT HAS BEEN CLICKED, SHOW THIS THROUGH COLOUR CHANGE */
@@ -300,25 +297,19 @@ input.edit {
   justify-content: center;
   display: inline-flex;
   justify-content: flex-end;
-  
 }
 
 .amount {
   font-weight: 600;
-  width: none !important;
-  display: flex;
-  justify-content: end;
+  display: inline-flex;
   justify-content: flex-end;
-  justify-content: center;
-  display: grid;
-  place-items: right;
-  place-content: right;
-  /* width: 100%; */
-  /* padding: 0px !important; */
 }
 
 .edit.amount {
   /* padding: 2px !important; */
+  font-weight: 600;
+  display: inline-flex;
+  justify-content: flex-end;
 }
 
 .date {
